management-app/minikube/k8s.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    # This rewrites the routes incoming to nginx to start at /
    # e.g., hostname.ca/foobar/test => hostname.ca/test
    # This allows us to run multiple services that can be accesible
    # via /vscode, /machinelearning, etc.
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx

  # We will only have one host: the full FQDN (from tailscale)
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/((.*))"
            backend:
              service:
                name: conglobo-frontend
                port:
                  number: 80
          - pathType: Prefix
            path: "/conglobo(/|$)(.*)"
            backend:
              service:
                name: conglobo
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: conglobo
spec:
  ports:
    - port: 80 # THIS SHOULD ALWAYS BE 80
      targetPort: 80
  selector:
    app: conglobo
